add obs pesquisa

--- a/Web_EX2-main/Web_EX2-main/Web_Livro/main.html
+++ b/Web_EX2-main/Web_EX2-main/Web_Livro/main.html
@@ -53,6 +53,13 @@
             font-size: 30px;
 
         }
+        
+        .vasco{
+
+            margin-left: 10px;
+            margin-top: 5px;
+
+        }
 
     </style>
 
@@ -72,6 +79,8 @@
             <label for="filter" class="form-label">Buscar por autor ou título</label>
         </div>
     </div>
+    
+    <p class="vasco">(OBS: Para a busca, inserir o autor e/ou título do livro perfeitamente, como citado na lista) 👍</p>
 
     <br>
 
